[tool.poetry]
name = "leetcode"
version = "0.1.0"
description = ""
authors = ["Ken HKS <kenhks014@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.11.0"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
isort = "^5.10.1"
pytest = "^7.2.0"
pytest-mock = "^3.10.0"
pytest-timeout = "^2.1.0"
pytest-sugar = "^0.9.6"
flake8 = "^5.0.4"
pyproject-flake8 = "^5.0.4.post1"
mypy = "^0.982"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "--timeout 120"
pythonpath = [
  ".",
]
norecursedirs = [
    ".git",
    ".venv",
]
python_files = "*.py"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
include_trailing_comma = true

[tool.flake8]
max-line-length = 120
exclude = ".venv,.git,__pycache__,"
ignore = "E203, W503"

[tool.mypy]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
